<resources>
    <string name="app_name">Calendar</string>
    <string name="description">Description</string>
    <string name="example_application">Example application</string>
    <string name="todo">todo</string>
    <string name="bienvenue_dans_votre_calendrier">BIENVENUE DANS VOTRE CALENDRIER</string>
    <string name="prochains_chabbats">Montées chabbat</string>
    <string name="calendrier_et_horaires">Calendrier et horaires</string>
    <string name="cr_ateur">createur</string>
    <string name="menu">Menu</string>
    <string name="chabbat">Chabbat</string>
    <string name="calendrier">Calendrier</string>
    <string name="cr_dits">Crédits</string>
    <string name="informations">Informations</string>
    <string name="autres_items">Autres items</string>
    <string name="calendar">Calendar</string>

</resources>
