<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/capture_ter"
        tools:context=".View.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/or"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/colorPrimary"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/black">

            <android.support.design.widget.TabItem
                android:id="@+id/tabMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="?attr/actionModePasteDrawable"
                android:text="@string/menu" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabChabbat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/btn_star_big_on"
                android:text="@string/chabbat" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabCalendrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_menu_month"
                android:text="@string/calendrier" />
        </android.support.design.widget.TabLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        app:headerLayout="@layout/navheader"
        app:menu="@menu/drawer_view" />


</android.support.v4.widget.DrawerLayout>