<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="115dp">

    <ImageView
        android:id="@drawable/vignette"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/vignette"
        tools:srcCompat="@tools:sample/avatars[0]" />


    <TextView
        android:id="@+id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@drawable/vignette"
        android:gravity="center_vertical"
        android:text="@string/example_application"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="SmallSp" />


    <TextView
        android:id="@+id/secondLine"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:layout_below="@+id/firstLine"
        android:layout_marginStart="-353dp"
        android:layout_marginTop="-21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="165dp"
        android:layout_toEndOf="@+id/firstLine"
        android:ellipsize="marquee"
        android:text="@string/description"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/thirdLine"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstLine"
        android:layout_marginStart="-351dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="165dp"
        android:layout_toEndOf="@+id/firstLine"
        android:ellipsize="marquee"
        android:text="@string/description"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/fourthLine"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:layout_below="@+id/firstLine"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="165dp"
        android:layout_toEndOf="@+id/firstLine"
        android:ellipsize="marquee"
        android:text="@string/description"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/fifthLine"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:layout_below="@+id/firstLine"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="165dp"
        android:layout_toEndOf="@+id/firstLine"
        android:ellipsize="marquee"
        android:text="@string/description"
        android:textSize="14sp" />





</RelativeLayout>